Finished enrollment system

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,16 @@
-/testHarness/
-/systemUsers/
-/authenticatedUsers/
-/customDatatypes/
-/systemUserModelFactories/
-/registrar/
-/offerings/
-/authenticationServer/
-/loggedInUserFactory/
-/application/
-/system/
-/databaseServer/
-/Transaction/
 /InstructorTransactions/
+/application/
+/authenticatedUsers/
+/authenticationServer/
+/customDatatypes/
+/databaseServer/
+/loggedInUserFactory/
+/offerings/
+/registrar/
+/system/
+/systemUserModelFactories/
+/systemUsers/
+/testHarness/
 /transaction/
+/instructorTransactions/
+/studentTransactions/
